--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,9 @@
-<script type="text/javascript" src="static/homeHandler.js"></script>
 <!DOCTYPE html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+{% assets "main_js" %}
+<script type="application/x-javascript" src="{{ ASSET_URL }}"></script>
+{% endassets %}
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
+        <script type="application/x-javascript" src="{{ url_for('static', filename='homeHandler.js') }}"></script>
         {% include 'includes/_navbar.html' %}
         <div class="container">
                 {% block body %}{% endblock %}
