--- a/templates/about.html
+++ b/templates/about.html
@@ -3,5 +3,5 @@
 
 {% block body %}
   <h1>About Us</h1>
-  <p>This is an app that plays with json data taken from wordstream.</p>
+  <p>This is an app that plays with json data taken from WordStream.</p>
 {% endblock %}
